--- a/package.json
+++ b/package.json
@@ -5,11 +5,11 @@
   "main": "index.js",
   "type": "module",
   "engines": {
-    "node": ">=16"
+    "node": "18.x"
   },
   "scripts": {
     "start": "node index.js",
-    "build": "node index.js",
+    "build": "echo 'Build completed'",
     "start-dev": "nodemon index.js",
     "update:quantities": "node scripts/update-quantities.js",
     "update-price-percentage": "node scripts/update-price-percentage.js",
@@ -27,7 +27,6 @@
     "better-auth": "^1.3.7",
     "cloudinary": "^1.37.0",
     "cors": "^2.8.5",
-    "crypto": "^1.0.1",
     "dayjs": "^1.11.7",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
